// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireStepPage /> renders correctly 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "enableResults": true,
      "id": "1",
      "isAuthenticated": true,
    }
  }
/>
`;

exports[`<QuestionnaireStepPage /> renders correctly when enableResults is false 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "enableResults": false,
      "id": "1",
      "isAuthenticated": true,
    }
  }
/>
`;

exports[`<QuestionnaireStepPage /> renders correctly when enableResults is null 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "enableResults": null,
      "id": "1",
      "isAuthenticated": true,
    }
  }
/>
`;

exports[`<QuestionnaireStepPage /> renders correctly when not authenticated 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "enableResults": true,
      "id": "1",
      "isAuthenticated": false,
    }
  }
/>
`;
